# Nuked-SC55

./: .gitmodules  CMakeLists.txt  README.md
cmake/: AsioSDK.cmake
sc55AU2/sc55AU2/sc55AU2.xcodeproj/: project.pbxproj
sc55AU2/sc55AU2/sc55AU2.xcodeproj/project.xcworkspace/xcuserdata/giuliozausa.xcuserdatad/: UserInterfaceState.xcuserstate
sc55AU2/sc55AU2/sc55AU2Extension/Common/: sc55AU2Extension-Bridging-Header.h
sc55AU2/sc55AU2/sc55AU2Extension/Common/Audio Unit/: sc55AU2ExtensionAudioUnit.h  sc55AU2ExtensionAudioUnit.mm
sc55AU2/sc55AU2/sc55AU2Extension/DSP/: sc55AU2ExtensionDSPKernel.hpp
sc55AU2/sc55AU2/sc55AU2Extension/UI/: EmulatorView.swift  JV880Buttons.swift  SC55Buttons.swift  SystemConfig.swift  sc55AU2ExtensionMainView.swift
src/: lcd.cpp  lcd.h  mcu.cpp  mcu.h  mcu_interrupt.cpp  mcu_interrupt.h  mcu_opcodes.cpp  mcu_timer.cpp  mcu_timer.h  midi.h  midi_portmidi.cpp  pcm.cpp  pcm.h  submcu.cpp  submcu.h
tools/: join  join.cpp  rom_joiner.py  rom_joiner2.py
